Updated some of the StateMod_TS code for handling time series data

--- a/info-mapper/src/app/map-components/map.component.html
+++ b/info-mapper/src/app/map-components/map.component.html
@@ -12,13 +12,14 @@
         <!-- Autopan button (4 directional arrows) -->
         <!-- <li><a title="Autopan tools" href="#autopan" role="tab"><i class="fa fa-arrows"></i></a></li> -->
         <!---Information Button (i)-->
-        <li><a title="Help / About" href="#information" role="tab"><i class="fa fa-info-circle"></i></a></li>
+        <!-- <li><a title="Help / About" href="#information" role="tab"><i class="fa fa-info-circle"></i></a></li> -->
       </ul>
 
       <!-- bottom aligned tabs -->
-      <!-- <ul role="tablist"> THIS COMMENTS OUT THE GITHUB LINK FOR THE SIDEBAR
-        <li><a title="External link to project on GitHub" href="https://github.com/nickpeihl/leaflet-sidebar-v2"><i class="fa fa-github"></i></a></li>
-      </ul> -->
+      <ul role="tablist">
+        <li><a title="Help / About" href="#information" role="tab"><i class="fa fa-info-circle"></i></a></li>
+        <!-- <li><a title="External link to project on GitHub" href="https://github.com/nickpeihl/leaflet-sidebar-v2"><i class="fa fa-github"></i></a></li> -->
+      </ul>
     </div>
 
     <!-- panel content -->
