Issue #183, added check for HTML element made by each graph button

--- a/info-mapper/src/app/map-components/dialog-content/dialog-content.html
+++ b/info-mapper/src/app/map-components/dialog-content/dialog-content.html
@@ -5,6 +5,8 @@
       cdkDragRootElement=".cdk-overlay-pane"
       cdkDragHandle>
     {{mainTitleString}}
+    <!-- This will show an image on the right side of the header (thanks to a little CSS) so users know they can move the dialog -->
+    <!-- <img src="assets/app-default/img/OWF-Logo-Favicon-32x32.ico" alt="logo"> -->
   </h1>
 
   <canvas id="myChart" width="900" height="500"></canvas>
