--- a/info-mapper/src/app/map-components/sidepanel-info/sidepanel-info.component.html
+++ b/info-mapper/src/app/map-components/sidepanel-info/sidepanel-info.component.html
@@ -1,10 +1,22 @@
 <div id="information-tab">
-  <div class="left"><b>Author:</b></div>
-  <div class="right"><b>{{properties.author}}</b></div><br>
-  <!--<div class="left"><b>Specification Flavor:</b></div>
-  <div class="right"><b>{{properties.specificationFlavor}}</b></div><br>-->
-  <div class="left"><b>Application Version:</b></div>
-  <div class="right"><b>{{appVersion}}</b></div><br>
-  <div class="left"><b>InfoMapper Version:</b></div>
-  <div class="right"><b>{{(projectVersion | async)?.version}}</b></div>
+
+  <p>
+    <b>Application {{appVersion}}</b>
+  </p>
+
+  <p>
+    <b>InfoMapper {{(projectVersion | async)?.version}}</b><br>
+    Developed by the Open Water Foundation<br>
+    The InfoMapper displays spatial data and related information.<br><br>
+
+    Copyright 2018-2020 Open Water Foundation<br><br>
+
+    License GPLv3+:  GNU GPL version 3 or later<br><br>
+
+    There is ABSOLUTELY NO WARRANTY; for details see the
+    'Disclaimer of Warranty' section of the GPLv3 license in the LICENSE file.
+    This is free software: you are free to change and redistribute it
+    under the conditions of the GPLv3 license in the LICENSE file.
+  </p>
+
 </div>
