--- a/info-mapper/src/app/map-components/map.component.css
+++ b/info-mapper/src/app/map-components/map.component.css
@@ -268,6 +268,111 @@ iframe {
   box-shadow: 0px 3px 3px rgba(0,0,0,0.2);
 }
 
+/* Styling for the border, size, and padding/.margins
+around the layer component list items*/
+td {
+  width: 100%;
+  text-align: left;
+  padding: 5px;
+  border-style: none;
+}
+td.name .description {
+  margin-top: 8px;
+  font-weight: normal;
+}
+table.layerOptions {
+  width: 100%;
+}
+table.layerOptions th {
+  padding: 5px;
+}
+table.layerOptions {
+  vertical-align: top;
+  text-align: right;
+  padding: 5px;
+  border-style: none;
+}
+
+td.toggle {
+  position: relative;
+}
+
+.layer-icon {
+  margin-left:5px;
+}
+
+#layer-title {
+  font-size:12px;
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+/* styling for the swtich background */
+.switch {
+  border-radius: 6px;
+  position: relative;
+  display: inline-block;
+  width: 45px;
+  height: 24px;
+}
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* styling for the slider inside of the switch */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+.slider:before {
+  position: absolute;
+  content: "O";
+  font-size: 12px;
+  text-align: center;
+  font-family: arial;
+
+  height: 16px;
+  width: 16px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+/* slider ui displays for changes*/
+input:checked + .slider {
+  background-color: #2196F3;
+}
+/* input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+} */
+input:checked + .slider:before {
+content: "|";
+  -webkit-transform: translateX(20px);
+  -ms-transform: translateX(20px);
+  transform: translateX(20px);
+}
+
+
 /* Styling for actual slider */
 /* .timeslider{
 	float:left;
