--- a/info-mapper/src/app/map-components/map.component.html
+++ b/info-mapper/src/app/map-components/map.component.html
@@ -109,7 +109,7 @@
 
                         <!-- Here go through each layerView and just show them. No need for trying to dynamically create
                         each one as a component. Just show each one of them here -->
-                        <div *ngFor="let layerView of geoLayerViewGroup.geoLayerViews">
+                        <div *ngFor="let layerView of geoLayerViewGroup.geoLayerViews;">
                           
                           <tr>
                             <td class="name">
@@ -134,7 +134,7 @@
                                       <!-- LINE -->
                                       <div *ngIf="this.getGeometryType(layerView.geoLayerId).toUpperCase().includes('LINESTRING')">
                                         <svg class="layer-icon" height="10" width="25">
-                                          <line x1="5" y1="5" x2="25" y2="5" [ngStyle]="styleObject(layerView.geoLayerSymbol)" style="stroke-width:2"/>
+                                          <line x1="5" y1="5" x2="25" y2="5" [ngStyle]="styleObject(layerView.geoLayerSymbol, 'ss')" style="stroke-width:2"/>
                                         </svg>
                                       </div>
                                       <!-- USER-PROVIDED DEFAULT MARKER -->
@@ -150,42 +150,42 @@
                                         <!-- SQUARE -->
                                         <div *ngIf="layerView.geoLayerSymbol.properties.symbolShape.toUpperCase() == 'SQUARE'">
                                           <svg width="18" height="18">
-                                            <rect width="17" height="17" [ngStyle]="styleObject(layerView.geoLayerSymbol)"/>
+                                            <rect width="17" height="17" [ngStyle]="styleObject(layerView.geoLayerSymbol, 'ss')"/>
                                           </svg>
                                         </div>
                                         <!-- TRIANGLE & TRIANGLE-UP -->
                                         <div *ngIf="layerView.geoLayerSymbol.properties.symbolShape.toUpperCase() == 'TRIANGLE' ||
                                         layerView.geoLayerSymbol.properties.symbolShape.toUpperCase() == 'TRIANGLE-UP'">
                                           <svg height="18" width="18">
-                                            <polygon points="9,1 1,17 17,17" [ngStyle]="styleObject(layerView.geoLayerSymbol)"/>
+                                            <polygon points="9,1 1,17 17,17" [ngStyle]="styleObject(layerView.geoLayerSymbol, 'ss')"/>
                                           </svg>
                                         </div>
                                         <!-- TRIANGLE-DOWN -->
                                         <div *ngIf="layerView.geoLayerSymbol.properties.symbolShape.toUpperCase() == 'TRIANGLE-DOWN'">
                                           <svg height="18" width="18">
-                                            <polygon points="0,0 18,0, 9,18" [ngStyle]="styleObject(layerView.geoLayerSymbol)"/>
+                                            <polygon points="0,0 18,0, 9,18" [ngStyle]="styleObject(layerView.geoLayerSymbol, 'ss')"/>
                                           </svg>
                                         </div>
                                         <!-- DIAMOND -->
                                         <div *ngIf="layerView.geoLayerSymbol.properties.symbolShape.toUpperCase() == 'DIAMOND'">
                                           <svg height="18" width="18">
-                                            <polygon points="0,9 9,18 18,9 9,0" [ngStyle]="styleObject(layerView.geoLayerSymbol)"/>
+                                            <polygon points="0,9 9,18 18,9 9,0" [ngStyle]="styleObject(layerView.geoLayerSymbol, 'ss')"/>
                                           </svg>
                                         </div>
                                         <!-- CIRCLE -->
                                         <div *ngIf="layerView.geoLayerSymbol.properties.symbolShape.toUpperCase() == 'CIRCLE'">
                                           <svg height="20" width="20">
-                                            <circle cx="10" cy="10" r="8" [ngStyle]="styleObject(layerView.geoLayerSymbol)"/>
+                                            <circle cx="10" cy="10" r="8" [ngStyle]="styleObject(layerView.geoLayerSymbol, 'ss')"/>
                                           </svg>
                                         </div>
                                         <!-- X -->
                                         <div *ngIf="layerView.geoLayerSymbol.properties.symbolShape.toUpperCase() == 'X'">
                                           <svg height="18" width="18">
                                             <line x1="0" y1="0" x2="18" y2="18"
-                                                  [ngStyle]="styleObject(layerView.geoLayerSymbol)"
+                                                  [ngStyle]="styleObject(layerView.geoLayerSymbol, 'ss')"
                                                   style="stroke-width: 2;"/>
                                             <line x1="18" y1="0" x2="0" y2="18"
-                                                  [ngStyle]="styleObject(layerView.geoLayerSymbol)"
+                                                  [ngStyle]="styleObject(layerView.geoLayerSymbol, 'ss')"
                                                   style="stroke-width: 2;"/>
                                           </svg>
                                         </div>
@@ -195,7 +195,7 @@
                                         layerView.geoLayerSymbol.properties.builtinSymbolImage === undefined &&
                                         !this.getGeometryType(layerView.geoLayerId).toUpperCase().includes('LINESTRING')">
                                           <svg width="18" height="18">
-                                            <rect width="17" height="17" [ngStyle]="styleObject(layerView.geoLayerSymbol)"/>
+                                            <rect width="17" height="17" [ngStyle]="styleObject(layerView.geoLayerSymbol, 'ss')"/>
                                           </svg>
                                         </div>
                                       </ng-template>
@@ -203,17 +203,15 @@
 
                                     <!-- CATEGORIZED -->
                                     <div *ngIf="layerView.geoLayerSymbol.classificationType.toUpperCase() ==  'CATEGORIZED'">
-                                      <div *ngFor="let categorizedKeyName of categorizedKeyNames; let num = index">
-                                        <div *ngIf="isObject(categorizedKeyColors[num])">
-                                          <!-- <b>Categorized by {{categorizedClassificationField[num]}}:</b> -->
-                                          <div *ngFor="let categorizedKeyColor of categorizedKeyColors[num]; let num2 = index">
-                                            <div *ngIf="(num2%2) == 0">
-                                              <!-- SQUARE will be default for polygons -->
-                                              <svg width="18" height="18">
-                                                <rect width="18" height="18" [ngStyle]="{'fill':categorizedKeyColors[num][num2 + 1]}" />
-                                              </svg>
-                                              {{categorizedKeyColors[num][num2]}}<br><br>
-                                            </div>
+                                      <div *ngIf="categorizedLayerColor[layerView.geoLayerId]">
+                                        <div *ngFor="let location of categorizedLayerColor[layerView.geoLayerId]; let i = index">
+                                          <div *ngIf="(i % 2) === 0">
+                                            <!-- SQUARE will be default for polygons -->
+                                            <svg width="18" height="18">
+                                              <rect width="18" height="18"
+                                                    [ngStyle]="{'fill': categorizedLayerColor[layerView.geoLayerId][i + 1]}" />
+                                            </svg>
+                                            {{location}}<br><br>
                                           </div>
                                         </div>
                                       </div>
