Updated code documentation and architecture

--- a/info-mapper/src/app/map-components/legend-symbols/legend-symbols.component.html
+++ b/info-mapper/src/app/map-components/legend-symbols/legend-symbols.component.html
@@ -11,7 +11,7 @@
       </div>
       <!-- USER-PROVIDED DEFAULT MARKER -->
       <div  *ngIf="this.symbolData.properties.symbolImage">
-        <img [attr.src]="this.mapService.getAppPath() + this.imageSrc()">
+        <img [attr.src]="this.appService.getAppPath() + this.imageSrc()">
       </div>
       <!-- BUILT-IN DEFAULT MARKER -->
       <div *ngIf="this.symbolData.properties.builtinSymbolImage">
