--- a/info-mapper/src/app/map-components/dialog-content/dialog-content.component.html
+++ b/info-mapper/src/app/map-components/dialog-content/dialog-content.component.html
@@ -4,12 +4,11 @@
     cdkDragRootElement=".cdk-overlay-pane"
     cdkDragHandle>
 
-  {{mainTitleString}}
+  {{mainTitleString || " "}}
 
   <!-- This will show an image on the right side of the header (thanks to a little CSS) so users know they can move the dialog.
   Right now though, a bootstrap svg image is used to display the arrows. Will replace if needed. -->
-  <!-- <img src="assets/app-default/img/OWF-Logo-Favicon-32x32.ico" alt="logo"> -->
-  <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrows-move" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+  <!-- <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrows-move" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
     <path fill-rule="evenodd"
           d="M6.5 8a.5.5 0 0 0-.5-.5H1.5a.5.5 0 0 0 0 1H6a.5.5 0 0 0 .5-.5z"/>
     <path fill-rule="evenodd"
@@ -20,21 +19,26 @@
           d="M5.646 12.146a.5.5 0 0 0 0 .708l2 2a.5.5 0 0 0 .708 0l2-2a.5.5 0 0 0-.708-.708L8 13.793l-1.646-1.647a.5.5 0 0 0-.708 0zM8 6.5a.5.5 0 0 1-.5-.5V1.5a.5.5 0 0 1 1 0V6a.5.5 0 0 1-.5.5z"/>
     <path fill-rule="evenodd"
           d="M5.646 3.854a.5.5 0 0 1 0-.708l2-2a.5.5 0 0 1 .708 0l2 2a.5.5 0 0 1-.708.708L8 2.207 6.354 3.854a.5.5 0 0 1-.708 0z"/>
-  </svg>
+  </svg> -->
 </h1>
 
-<!-- Create and display the graph -->
-<div *ngIf="showGraph">
-  <canvas id="myChart" width="900" height="500"></canvas>
-</div>
+<div>
 
-<div *ngIf="showText" class="textBox">
-  <pre>{{text}}</pre>
-</div>
+  <!-- Create and display the graph if the showGraph Dialog class variable is true -->
+  <div *ngIf="showGraph">
+    <canvas id="myChart" width="900" height="500"></canvas>
+  </div>
 
-<!-- The Close button in the bottom left -->
-<div mat-dialog-actions>
-  <button mat-raised-button (click)="onClose()">
-    Close
-  </button>
+  <!-- Show a regular text file if the showText Dialog class variable is true -->
+  <div *ngIf="showText" class="textBox">
+    <pre>{{text}}</pre>
+  </div>
+
+  <!-- The Close button in the bottom left -->
+  <div mat-dialog-actions>
+    <button mat-raised-button (click)="onClose()">
+      Close
+    </button>
+  </div>
+
 </div>
