--- a/info-mapper/src/app/map-components/dialog-content/dialog-content.component.css
+++ b/info-mapper/src/app/map-components/dialog-content/dialog-content.component.css
@@ -1,8 +1,3 @@
-/* Changes the background color of the Close button in the Dialog */
-.mat-raised-button {
-  background-color: #c2c1c1;
-}
-
 /* In the container box class, the <h1> there is the draggable element by the user. Its default had a margin of 20px,
 and was not draggable, being useless in this case. Getting rid of the margin and padding the top and bottom of the <h1>
 allowed the ability to expand the draggable area, hopefully making the process easier for users. */
@@ -11,6 +6,7 @@ h1 {
   padding-top: 10px;
   padding-bottom: 20px;
   margin-bottom: 0px;
+  text-align: center;
 }
 
 /* The arrows need to be positioned to the very right in the header element. */
@@ -24,4 +20,17 @@ div pre {
   height: 600px;
   font-family: 'Courier New', Courier, monospace;
   font-size: small;
+}
+
+/* Changes the background color of the Close button in the Dialog */
+.mat-raised-button {
+  background-color: #c2c1c1;
+}
+
+.mat-dialog-actions button {
+  margin-left: 5px;
+}
+
+.myChart {
+  margin-top: 5px;
 }
