--- a/info-mapper/src/app/map-components/dialog-content/dialog-content.component.html
+++ b/info-mapper/src/app/map-components/dialog-content/dialog-content.component.html
@@ -1,10 +1,8 @@
 <!-- The draggable <h1> element so a user can move a graph around anywhere on the screen -->
 <div cdkDrag cdkDragRootElement=".cdk-overlay-pane">
+
   <h1 mat-dialog-title
       cdkDragHandle>
-
-    {{mainTitleString || "Report"}}
-
     <!-- This will show an image on the right side of the header (thanks to a little CSS) so users know they can move the dialog.
     Right now though, a bootstrap svg image is used to display the arrows. Will replace if needed. -->
     <!-- <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrows-move" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -21,8 +19,16 @@
     </svg> -->
   </h1>
 
+  <h3>
+    {{mainTitleString}}
+  </h3>
 
-
+  <!-- Show Chart.js by default -->
+  <div *ngIf="!chartPackage">
+    <div *ngIf="showGraph">
+      <canvas id="myChart" width="900" height="500"></canvas>
+    </div>
+  </div>
   <!-- Create and display a Chart.js graph if the showGraph Dialog class variable is true -->
   <div *ngIf="chartPackage">
     <div *ngIf="showGraph && chartPackage.toUpperCase() === 'CHARTJS'">
@@ -32,7 +38,7 @@
   <!-- Create and display a Plotly graph if the showGraph Dialog class variable is true -->
   <div *ngIf="chartPackage">
     <div *ngIf="showGraph && chartPackage.toUpperCase() === 'PLOTLY'">
-      <div id="plotlyDiv"></div>
+      <div id="chart"></div>
     </div>
   </div>
   <!-- Show a regular text file if the showText Dialog class variable is true -->
