--- a/info-mapper/src/app/map-components/dialog-content/dialog-content.component.css
+++ b/info-mapper/src/app/map-components/dialog-content/dialog-content.component.css
@@ -2,13 +2,13 @@
 and was not draggable, being useless in this case. Getting rid of the margin and padding the top and bottom of the <h1>
 allowed the ability to expand the draggable area, hopefully making the process easier for users. */
 h1 {
-  background-color: #d4d3d3;
+  background-color: #e6e6e6;
   padding-top: 10px;
   padding-bottom: 15px;
   margin-bottom: 0px;
 }
 
-h3 {
+h4 {
   text-align: center;
   padding-top: 10px;
 }
