Issue #185, updated the InfoMapper so that plotly is now the default charting package

--- a/info-mapper/src/app/map-components/dialog-content/dialog-content.component.html
+++ b/info-mapper/src/app/map-components/dialog-content/dialog-content.component.html
@@ -26,7 +26,7 @@
   <!-- Show Chart.js by default -->
   <div *ngIf="!chartPackage">
     <div *ngIf="showGraph">
-      <canvas id="myChart" width="900" height="500"></canvas>
+      <div id="plotlyDiv"></div>
     </div>
   </div>
   <!-- Create and display a Chart.js graph if the showGraph Dialog class variable is true -->
